# cycloneX

./: .gitignore  CMakeLists.txt  CycloneX_Worker_Colab.ipynb  CycloneX_Worker_Kaggle.ipynb  NETWORK_SETUP.md  build.ps1  compile.bat  config.yaml  cyclone_agent.py  cyclone_analyzer.py  family_analysis_report.md  make.bat  puzzles_solved.json  run.bat  volume_max.ps1
CUDACyclone-main/: BruteforceSolver.h  BsgsSolver.cu  BsgsSolver.h  CUDACyclone.cu  CUDAHash.cu  CUDAUtils.h  ISolver.hpp  KangarooSolver.cu  KangarooSolver.h  RhoSolver.cu  RhoSolver.h
agent/: CMakeLists.txt
agent/src/: config.h  database.h  gpu_monitor.h  http_server.h  job_manager.h  main.cpp  result_validator.h
core/: CMakeLists.txt
core/include/: cyclone_core.h
core/kernels/: ecc_kernel.cu
core/scheduler/: gpu_runner.cu
cyclone-solvers/: ISolver.hpp
dashboard/: index.html
experiments/: 001_mod5_family_analysis.py  001_mod5_family_report.md
launcher/: CMakeLists.txt
launcher/src/: main.cpp
plugins/: __init__.py  base.py  bit_density.py  byte_frequency.py  delta_xor.py  entropy.py  interval_bias.py  prefix_bias.py  sufix_bias.py  transition_matrix.py
shared/: cyclone_types.h
